--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <section class="box-content" data-aos="slide-right">
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 col-xl-3">
           <div class="title-box">
             <span class="pref">15</span>
             <h3 class="sub">Years of</h3>
@@ -81,7 +81,7 @@
         <!--             -->
         <div class="col-md-8">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-xl-4">
               <div class="icon-box">
                 <div class="icon">
                   <i class="fas fa-stamp fa-3x"></i>
@@ -94,7 +94,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-xl-4">
               <div class="icon-box">
                 <div class="icon">
                   <i class="fas fa-cheese fa-3x"></i>
@@ -108,7 +108,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-xl-4">
               <div class="icon-box">
                 <div class="icon">
                   <i class="fas fa-coins fa-3x"></i>
@@ -137,15 +137,14 @@
     </div>
     <div class="container-fluid">
       <div class="glide">
-        <aside class="aside-gallery-image">
-          <div class="card">
+        <!-- <aside class="aside-gallery-image">
+          <div class="card"> -->
             <div class="glide__arrows" data-glide-el="controls">
-              <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
-                <</button> <button class="glide__arrow glide__arrow--right" data-glide-dir=">">>
-              </button>
+              <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-arrow-circle-left fa-3x"></i></button> 
+                <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-arrow-circle-right fa-3x"></i></button>
             </div>
-          </div>
-        </aside>
+          <!-- </div>
+        </aside> -->
         <div class="glide__track" data-glide-el="track">
           <ul class="glide__slides">
             <li class="glide__slide">
