--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
+  <link rel="icon" type="image/x-icon" href="/imgs/favicon.ico">
 
 </head>
 
@@ -64,7 +64,6 @@
       <span>Delight in every bite</span>
       <h1>Give the best treat to yourself</h1>
       <p>Taste that Amazes you</p>
-      <!-- <a href="#" class="btn btn-primary">Find Out More</a> -->
     </div>
   </div>
   <section class="box-content" data-aos="slide-right">
@@ -78,7 +77,6 @@
           </div>
           <h5></h5>
         </div>
-        <!--             -->
         <div class="col-md-8">
           <div class="row">
             <div class="col-md-4 col-xl-4">
